# esp32_micropython

./: .gitignore  README.md  dm.py  pyproject.toml  reddit_post.md  setup.py
.github/workflows/: python-publish.yml  static.yml
docs/: flash_micropython.md  identify_board.md  index.html
docs_md/: falshing_manually.md
esp32_micropython/: dm.py
test_download/: test_wifi_clone.py
